# factory-thread-simulation

./: CMakeLists.txt  main.cpp
gui/: DrawGui.cpp  DrawGui.h
resources/: PartsStorage.cpp  PartsStorage.h  ProductStockpille.cpp  ProductStockpille.h  Tool.cpp  Tool.h  Workplace.cpp  Workplace.h
threads/: Courier.cpp  Courier.h  FactoryWorker.cpp  FactoryWorker.h  Orders.cpp  Orders.h
